syntax = 'proto3';

import "eddsakeypair.proto";

message DistributedEddsaKey {
  int32 curve = 1;
  EddsaKeyPair local_private_key = 2;
  bytes remote_public_point = 3;
  bytes compound_public_point = 4;
}