syntax = 'proto3';

message EddsaKeyPair {
  int32 curve = 1;
  bytes secret = 2;
}